# SmartHunt

./: .env.example  .gitattributes  .gitignore  CHANGELOG.md  Makefile  PROJECT_STRUCTURE.txt  README.md  backend-naked-pod.yaml  docker-compose.yml  pyproject.toml
.github/: CODEOWNERS
.github/workflows/: ci.yml  container.yml
backend/: .dockerignore  Dockerfile  alembic.ini  output.txt  pyproject.toml  pytest.ini  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: b8d5d9f1d8a9_create_users_table.py  bb20af5a7c5f_create_jobs_table.py  e2fdd783e4aa_create_resumes_table.py
backend/scripts/: test_browser.py  test_database.py  test_password.py  test_provider.py  test_settings.py
backend/src/smarthunt/: debug_settings.py  main.py
backend/src/smarthunt/api/dependencies/: __init__.py  database.py  init.py
backend/src/smarthunt/api/routes/: __init__.py  auth.py  health.py  init.py  jobs.py  jobs.py-old  providers.py  scheduler.py  system.py  version.py
backend/src/smarthunt/api/schemas/: __init__.py  common.py  init.py  job.py  provider.py  search.py
backend/src/smarthunt/auth/schemas/: __init__.py  auth.py
backend/src/smarthunt/auth/security/: __init__.py  jwt.py  password.py
backend/src/smarthunt/auth/services/: auth_service.py
backend/src/smarthunt/browser/: base.py  provider_executor.py  provider_result.py
backend/src/smarthunt/browser/core/: __init__.py  browser.py
backend/src/smarthunt/browser/providers/: __init__.py  base.py  example_provider.py  mock_provider.py  mock_provider2.py
backend/src/smarthunt/browser/registry/: __init__.py  registry.py
backend/src/smarthunt/core/: config.py  constants.py  exceptions.py  lifecycle.py  logging.py
backend/src/smarthunt/database/: health.py  session.py
backend/src/smarthunt/database/models/: __init__.py  job.py  resume.py  user.py
backend/src/smarthunt/database/repositories/: __init__.py  base.py  job_repository.py  user_repository.py
backend/src/smarthunt/domain/: __init__.py  job.py
backend/src/smarthunt/logging/: config.py
backend/src/smarthunt/matching/api/: router.py
backend/src/smarthunt/matching/services/: recommendation.py  scoring.py
backend/src/smarthunt/metrics/: __init__.py  business.py
backend/src/smarthunt/middleware/: request_id.py  request_logging.py
backend/src/smarthunt/providers/: __init__.py
backend/src/smarthunt/providers/base/: provider.py
backend/src/smarthunt/providers/linkedin/: __init__.py  provider.py
backend/src/smarthunt/providers/models/: job.py
backend/src/smarthunt/providers/registry/: registry.py
backend/src/smarthunt/resume/api/: list_router.py  router.py  stats_router.py
backend/src/smarthunt/resume/parser/: parser.py
backend/src/smarthunt/resume/repositories/: repository.py
backend/src/smarthunt/resume/services/: persistence.py
backend/src/smarthunt/resume/storage/: storage.py
backend/src/smarthunt/scheduler/: __init__.py  jobs.py
backend/src/smarthunt/search/: __init__.py  filters.py  router.py  schemas.py  service.py
backend/src/smarthunt/services/: __init__.py  discovery_service.py  job_service.py  provider_service.py  scheduler_service.py  scraper_service.py
backend/src/smarthunt/shared/: exceptions.py  logging.py
backend/src/smarthunt/shared/observability/: context.py
backend/src/smarthunt/tracing/: tracer.py
backend/tests/: conftest.py  test_auth.py  test_jobs.py
gitops/: README.md
gitops/apps/: smarthunt.yaml
gitops/projects/: smarthunt-project.yaml
helm/smarthunt/: Chart.yaml  values.yaml
k8s/base/: backend-buildconfig.yaml  backend-configmap.yaml  backend-deployment.yaml  backend-imagestream.yaml  backend-route.yaml  (+3 more)
(+7 files in other folders)
