[project]
name = "smarthunt-root"
version = "0.1.0"
description = "Smart Job Search Automation Platform Root Workspace"
requires-python = ">=3.12"
dependencies = [
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
    "pytest-env>=1.6.0",
    "anyio>=4.14.2",
    "httpx>=0.27.0",
    # ربط الـ backend كـ dependency محلي ومباشر لدمج كافة مكتباته في البيئة الموحدة
    "smarthunt-backend",
]

[tool.uv]
workspace = { members = ["backend"] }

[tool.uv.sources]
smarthunt-backend = { workspace = true }

[tool.pytest.ini_options]
testpaths = ["backend/tests"]
python_files = ["test_*.py"]
asyncio_mode = "auto"
addopts = "-ra"
norecursedirs = ["backend/scripts", "scripts", ".venv", "backend/.venv"]

[tool.pytest_env]
DATABASE_URL = "postgresql+asyncpg://postgres:postgres@localhost:5432/smarthunt"

[dependency-groups]
dev = [
    "black>=26.5.1",
    "ruff>=0.15.21",
]
