[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[project]
name = "smarthunt"
version = "0.1.0"
description = "AI-powered job search and application automation platform."
readme = "../README.md"
requires-python = ">=3.12"
license = { text = "MIT" }

authors = [
    { name = "Badr" }
]

keywords = [
    "ai",
    "jobs",
    "automation",
    "fastapi",
    "playwright",
    "career",
    "ats",
    "resume"
]

dependencies = [
    "fastapi>=0.116,<1.0",
    "uvicorn[standard]>=0.35,<1.0",
    "sqlalchemy>=2.0,<3.0",
    "alembic>=1.16,<2.0",
    "asyncpg>=0.31,<1.0",
    "pydantic>=2.11,<3.0",
    "pydantic-settings>=2.10,<3.0",
    "httpx>=0.28,<1.0",
    "python-dotenv>=1.1,<2.0",
    "structlog>=25.4,<26.0",
    "playwright>=1.61.0",
]

[dependency-groups]
dev = [
    "pytest>=8.4",
    "pytest-cov>=6.2",
    "ruff>=0.12",
    "black>=25.1",
    "isort>=6.0",
    "mypy>=1.17",
    "pre-commit>=4.2",
    "sqlalchemy2-stubs>=0.0.2a38",
]

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",
    "F",
    "I",
    "UP",
    "B",
]

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-ra"

[tool.coverage.run]
branch = true
source = ["src/smarthunt"]

[tool.mypy]
python_version = "3.12"
strict = true
