[project]
name = "smarthunt-backend"
version = "0.1.0"
description = "SmartHunt Backend Service"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.116.0",
    "uvicorn[standard]>=0.30.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.29.0",
    "alembic>=1.13.0",
    "greenlet>=3.0.0",
    "pydantic>=2.6.0",
    "pydantic-settings>=2.0.0",
    "email-validator>=2.0.0",
    "pyjwt>=2.8.0",
    "passlib[bcrypt]>=1.7.4",
    "cryptography>=42.0.0",
    "bcrypt>=4.0.0",
    "playwright>=1.40.0",
    "apscheduler>=3.10.0",
    "structlog>=24.1.0",
    "colorama>=0.4.6",
    "openai>=1.10.0",
    "langchain>=0.1.0",
    "langchain-openai>=0.0.5",
    "pypdf>=4.0.0",
    "python-docx>=1.1.0",
    "prometheus-fastapi-instrumentator>=8.0.2",
]

[tool.pytest.ini_options]
testpaths = ["backend/tests"]
python_files = ["test_*.py"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
addopts = "-ra"
norecursedirs = ["backend/scripts", "scripts", ".venv", "node_modules", "backend/.venv"]

[tool.pytest_env]
DATABASE_URL = "postgresql+asyncpg://postgres:postgres@localhost:5432/smarthunt"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.black]
line-length = 100
